Fix affichage code DT

--- a/explorer.qmd
+++ b/explorer.qmd
@@ -72,6 +72,9 @@ plot_ly(
 ### Table filtrable et export
 
 ```{r}
+#| echo: false
+#| output: true
+#| message: false
 DT::datatable(
   sd,
   extensions = "Buttons",
